fix(components): 2192 comma spacing term separator
Closes #2192

--- a/app/scripts/components/facets/styles/facets.less
+++ b/app/scripts/components/facets/styles/facets.less
@@ -56,7 +56,7 @@
 
       .term-separator {
         color: @orange;
-        margin: 0 2px;
+        margin: 0 2px 0 -3px;
         text-decoration: none;
       }
 
@@ -161,4 +161,3 @@
   color: #ffffff;
   background-color: #1f486c;
 }
-
